# hhds

./: .bazelrc  .clang-tidy  .gitignore  ACKNOWLEDGEMENTS  AGENTS.md  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  TODO  TODO.md  WORKSPACE  api.md  api_attribute.md  api_todo.md  graph_plan.txt  out  output.txt  plan.md  sample.md  todo.md  todo_attr.md  todo_first.md
.github/workflows/: cpp-bench.yml  cpp-build.yml  cpp-tests.yml  greetings.yml  rust-bench.yml  rust-build.yml  rust-tests.yml
build-support/: tree-sitter-cpp.bazel  tree-sitter.bazel
docs/: storage_internals.md
hhds/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  SelectionDAG.cpp  attr.hpp  graph.cpp  graph.hpp  graph_base.hpp  graph_node.hpp  graph_overflow.hpp  graph_pin.hpp  graph_sizing.hpp  hash_set3.hpp  hhds_tree_cat.cpp  hhds_tree_diff.cpp  index.hpp  lhtree.hpp  source_excerpt.hpp  source_locator.hpp  sourcemap_emit.hpp  str_ci.hpp  str_hash.hpp  temptree.cpp  testing.cpp  tree-test.hpp  tree.cpp  tree.hpp  tree_del.hpp  tree_edit_distance.hpp  tree_print.cpp  tree_print.hpp  tree_pseudo.hpp  tree_serial.cpp  unordered_dense.hpp  workfile.hpp  wrapper.cpp  wrapper.hpp
hhds/attrs/: name.hpp  srcid.hpp
hhds/bench/: .gitignore  BUILD.bazel  hhds_bench.cpp  schema.md
hhds/bench/generator/: graph_spec.cpp  graph_spec.hpp
hhds/bench/scripts/: plot.py  print_table.py  run_hier_sweep.sh  run_inline_vs_overflow.sh  run_node_sweep.sh  run_overflow_compare.sh  run_pin_sweep.sh  run_sweep.py
hhds/benchmarks_final/: .gitignore  BUILD.bazel  README.md  final_bench_common.hpp
hhds/benchmarks_final/boost/: BUILD.bazel  boost_final_bench.cpp
hhds/benchmarks_final/hhds/: BUILD.bazel  hhds_final_bench.cpp
hhds/benchmarks_final/livehd/: README.md
hhds/benchmarks_final/scripts/: make_comparison.py  plot_results.py  run_all.sh
hhds/benchmarks_final/smaller_benchmarks/: run_smaller.sh
hhds/bindgen-test/: Cargo.toml  build.rs
hhds/bindgen-test/src/: lib.rs
hhds/contracts/: AGENTS.md  CLAUDE.md  attr.cpp  graph_api.cpp  name_persistence.cpp  storage.cpp  tree_api.cpp
hhds/hhds-sys/: BUILD.bazel  Cargo.toml  build.rs  ffi_tree.hpp  run_traversal_benchmark.sh
hhds/hhds-sys/.cargo/: config.toml
hhds/hhds-sys/benches/: deep_tree_bench.rs  rust_bench
hhds/hhds-sys/benches/creation/: deep_tree_bench.rs  mixed_tree_building_comparison.rs  representative_tree_bench.rs  wide_tree_bench.rs  wide_tree_ego_comparison.rs  wide_tree_ego_comparison_small.rs
hhds/hhds-sys/benches/navigation/: chip_typical_navigation_comparison.rs
hhds/hhds-sys/benches/traversal/: deep_tree_bench.rs  representative_tree_bench.rs  wide_tree_bench.rs  wide_tree_traversal_ego_comparison.rs  wide_tree_traversal_ego_comparison_small.rs
hhds/hhds-sys/src/: lib.rs  main.rs  tree.rs
hhds/hhds-sys/tests/: forest_correctness.rs
hhds/hhds_sys/: Cargo.toml  README.md  build.rs  results.sh  run_creation_benchmark.sh
hhds/hhds_sys/benches/creation/: representative_tree_bench.rs
hhds/hhds_sys/benches/traversal/: deep_tree_bench.rs  wide_tree_bench.rs
hhds/hhds_sys/src/: bindings.rs  lib.rs  tree.rs
hhds/hhds_sys/tests/: forest_correctness.rs
hhds/rust/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel
hhds/rust/hello-world/: BUILD.bazel  Cargo.toml
hhds/rust/hello-world/src/: main.rs
hhds/rust/hello_lib/: BUILD.bazel  Cargo.toml
hhds/src/: main.rs
hhds/tests/: chip_typical_correctness.cpp  chip_typical_long_correctness.cpp  chip_typical_navigation_comparison.cpp  commutative_ops_test.cpp  deep_tree_correctness.cpp  forest_concurrency.cpp  forest_correctness.cpp  forest_slot_state_test.cpp  forward_graph_bench.cpp  graph_bench.cpp  graph_concurrency.cpp  graph_test.cpp  graph_tests.cpp  hhds_tree_diff_test.cpp  iterators.cpp  iterators_impl.cpp  mixed_tree_building_benchmark.cpp  print_sample.cpp  probe_test.cpp  rigtorp_map.hpp  scale_test.cpp  semantic_diff_test.cpp  small_graph_test.cpp  small_set_bench.cpp  source_excerpt_test.cpp  source_locator_test.cpp  sourcemap_emit_test.cpp  stress_tester.cpp  test_storage.cpp  tree_chip_typical_tests.cpp  tree_clone_test.cpp  tree_edit_distance_bench.cpp  tree_edit_distance_test.cpp  tree_replace_test.cpp  tree_sample.cpp  tree_test.cpp  tree_test_utils.hpp  tree_type_test.cpp  tree_wrapper_test.cpp  wide_tree_correctness.cpp
hhds/tests/add_append_bench/: chip_typical_long_tree_bench.cpp  chip_typical_tree_bench.cpp  deep_tree_bench.cpp  wide_tree_bench.cpp
hhds/tests/creation_bench/: chip_typical_long_tree_bench.cpp  chip_typical_tree_bench.cpp  deep_tree_bench.cpp  mock_tree_bench.cpp  representative_tree_bench.cpp  wide_tree_bench.cpp
hhds/tests/traversal_bench/preorder_bench/: chip_typical_long_tree_bench.cpp  chip_typical_tree_bench.cpp  deep_tree_bench.cpp  representative_tree_bench.cpp  wide_tree_bench.cpp
hhds/tests/traversal_bench/sibling_order_bench/: chip_typical_long_tree_bench.cpp  deep_tree_bench.cpp
src/: BUILD  graph.cpp  graph.hpp  graph_node.hpp  graph_overflow.hpp  graph_pin.hpp  tree.hpp
tools/: emhash.BUILD
