load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_cc//cc:defs.bzl", "cc_import")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_toolchain")

#native_binary(
#    name = "clang",
#    src = "@llvm_toolchain_llvm//:bin/clang",
#)

#cc_import(
#    name = "libclang",
#    shared_library = "@llvm_toolchain_llvm//:libclang",
#)
#
#rust_bindgen_toolchain(
#    name = "rust_bindgen_toolchain",
#    bindgen = "@rules_rust_bindgen//3rdparty:bindgen",
#    clang = ":clang",
#    libclang = "libclang",
#)
#
#toolchain(
#    name = "my_bindgen_toolchain",
#    toolchain = ":rust_bindgen_toolchain",
#    toolchain_type = "@rules_rust_bindgen//:toolchain_type",
#)
