###############################################################################
module(
    name = "hhds",
    version = "0.2.0",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")


bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")

bazel_dep(name = "abseil-cpp", version = "20250814.2") # 20240722.0.bcr.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Perfetto
http_archive(
    name = "com_google_perfetto",
    url = "https://github.com/google/perfetto/archive/refs/tags/v49.0.tar.gz",
    #build_file = "//:perfetto.BUILD",
    sha256 = "0871a92a162ac5655b7d724f9359b15a75c4e92472716edbc4227a64a4680be4",
    strip_prefix = "perfetto-49.0/sdk",
)

# emhash
http_archive(
    name = "emhash",
    build_file = "//tools:emhash.BUILD",
    sha256 = "9ec42a978c34653bc6f0c02b5c2e874d34265f8543cede787c79eb71f6e22f0f",
    strip_prefix = "emhash-60127291d95b5e345ed26c719554130f3dab3bbd",
    urls = ["https://github.com/renau/emhash/archive/60127291d95b5e345ed26c719554130f3dab3bbd.zip"],
)

# clang-tidy
http_archive(
    name = "bazel_clang_tidy",
    sha256 = "8eb86907abcff8e23b167356222e398a4d3ab7e3277b7dacd29e7d710d8c8ca5",
    strip_prefix = "bazel_clang_tidy-db677011c7363509a288a9fb3bf0a50830bbf791",
    urls = ["https://github.com/erenon/bazel_clang_tidy/archive/db677011c7363509a288a9fb3bf0a50830bbf791.zip"],
)

# iassert
bazel_dep(name = "iassert", version = "0.1.1")

archive_override(
    module_name = "iassert",
    integrity = "sha256-sMOp2bzYfLhVMYfFoliGIXKHAi3bZpTVTSD+2oXjMp8=",
    strip_prefix = "iassert-0460fbd8405a96b3615be425df9066eba835fcf0",
    urls = [
        "https://github.com/masc-ucsc/iassert/archive/0460fbd8405a96b3615be425df9066eba835fcf0.zip",
    ],
)

#Skylib
#http_archive(
#    name = "bazel_skylib",
#    urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.0/bazel-skylib-1.0.0.tar.gz"],
#    sha256 = "f7b2b61e6de49f602af263649604ec2460fcd8bdb9d4306a7bb9a5f74fc6e53e",
#)

## llvm
#bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Configure and register the toolchain.
#llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
#llvm.toolchain(
#   llvm_version = "16.0.0",
#)

#use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

#register_toolchains("@llvm_toolchain//:all")
