# This file is distributed under the BSD 3-Clause License. See LICENSE for details.

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//tools:copt_default.bzl", "COPTS")

exports_files(["tree.hpp"])

config_setting(
    name = "use_profiling",
    values = {"define": "profiling=1"},
)

cc_library(
    name = "rigtorp",
    hdrs = glob(["tests/*.hpp"]),
    copts = COPTS,
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "iassert",
    hdrs = ["iassert.hpp"],
    include_prefix = "iassert",
    includes = ["."],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "core",
    srcs = glob(
        [
            "tree.cpp",
            "tree_print.cpp",
            "tree_serial.cpp",
        ],
        exclude = ["*test*.cpp"],
    ),
    hdrs = glob([
        "attr.hpp",
        "tree.hpp",
        "tree_print.hpp",
        "graph_sizing.hpp",
        "attrs/name.hpp",
    ]),
    copts = COPTS,
    defines = select({
        ":use_profiling": [
            "HHDS_PROFILING=1",
        ],
        "//conditions:default": [],
    }),
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@emhash",
        "@iassert",
    ] + select({
        ":use_profiling": [
            "@com_google_perfetto//:perfetto",
        ],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "graph",
    srcs = ["graph.cpp"],
    hdrs = [
        "attr.hpp",
        "attrs/name.hpp",
        "graph.hpp",
        "graph_sizing.hpp",
        "hash_set3.hpp",
        "index.hpp",
        "tree.hpp",
        "tree_print.hpp",
        "unordered_dense.hpp",
    ],
    copts = COPTS + [
        "-Wno-unused-parameter",
        "-Wno-unused-variable",
        "-Wno-shadow",
        "-Wno-self-assign",
        "-Wno-unused-private-field",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@emhash",
        "@iassert",
    ],
)

cc_binary(
    name = "add_append_deep_bench",
    srcs = ["tests/add_append_bench/deep_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "traversal_deep_bench",
    srcs = ["tests/traversal_bench/preorder_bench/deep_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "traversal_wide_bench",
    srcs = ["tests/traversal_bench/preorder_bench/wide_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "traversal_chip_typical_bench",
    srcs = ["tests/traversal_bench/preorder_bench/chip_typical_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "traversal_chip_long_typical_bench",
    srcs = ["tests/traversal_bench/preorder_bench/chip_typical_long_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "build_deep_bench",
    srcs = ["tests/creation_bench/deep_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "build_wide_bench",
    srcs = ["tests/creation_bench/wide_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "add_append_wide_bench",
    srcs = ["tests/add_append_bench/wide_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "add_append_chip_typical_bench",
    srcs = ["tests/add_append_bench/chip_typical_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "add_append_chip_typical_long_bench",
    srcs = ["tests/add_append_bench/chip_typical_long_tree_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "graph_test",
    srcs = ["tests/graph_test.cpp"],
    deps = [":graph"],
)

cc_binary(
    name = "forward_graph_bench",
    srcs = ["tests/forward_graph_bench.cpp"],
    tags = ["manual"],
    deps = [
        ":graph",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "storage_contract",
    srcs = ["contracts/storage.cpp"],
    deps = [
        ":core",
        ":graph",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iterators_impl",
    srcs = ["tests/iterators_impl.cpp"],
    deps = [
        ":core",
        ":graph",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "scale_test",
    srcs = ["tests/scale_test.cpp"],
    deps = [
        ":core",
    ],
)

cc_test(
    name = "deep_tree_correctness",
    srcs = ["tests/deep_tree_correctness.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "wide_tree_correctness",
    srcs = ["tests/wide_tree_correctness.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
    # copts = ["-DPROFILE"],  # Enable profiling in code
    # linkopts = ["-lprofiler"],
)

cc_test(
    name = "chip_typical_correctness",
    srcs = ["tests/chip_typical_correctness.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "chip_typical_long_correctness",
    srcs = ["tests/chip_typical_long_correctness.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "forest_correctness",
    srcs = ["tests/forest_correctness.cpp"],
    copts = [
        "-DTESTING",
    ],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "forest_concurrency",
    srcs = ["tests/forest_concurrency.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "graph_concurrency",
    srcs = ["tests/graph_concurrency.cpp"],
    deps = [
        ":graph",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tree_clone_test",
    srcs = ["tests/tree_clone_test.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "chip_typical_navigation_comparison",
    srcs = ["tests/chip_typical_navigation_comparison.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "tree_wrapper_test",
    srcs = ["tests/tree_wrapper_test.cpp"],
    deps = [
        ":core",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tree_api_contract",
    srcs = ["contracts/tree_api.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "name_persistence_contract",
    srcs = ["contracts/name_persistence.cpp"],
    deps = [
        ":core",
        ":graph",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "graph_api_contract",
    srcs = ["contracts/graph_api.cpp"],
    deps = [
        ":graph",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "attr_contract",
    srcs = ["contracts/attr.cpp"],
    deps = [
        ":graph",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tree_type_test",
    srcs = ["tests/tree_type_test.cpp"],
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "mixed_tree_building_benchmark",
    srcs = ["tests/mixed_tree_building_benchmark.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "tree_sample",
    srcs = ["tests/tree_sample.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@abseil-cpp//absl/container:flat_hash_map",
    ],
)

cc_binary(
    name = "print_sample",
    srcs = ["tests/print_sample.cpp"],
    tags = ["manual"],
    deps = [
        ":core",
        "@abseil-cpp//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "tree_edit_distance",
    hdrs = ["tree_edit_distance.hpp"],
    deps = [":core"],
)

cc_test(
    name = "tree_edit_distance_test",
    srcs = ["tests/tree_edit_distance_test.cpp"],
    deps = [
        ":core",
        ":tree_edit_distance",
    ],
)

# cc_binary(
#     name = "graph_bin",
#     srcs = ["graph_main.cpp"],
#     deps = [":graph_lib"],
# )
