bazel_dep(name = "rules_rust", version = "0.59.2")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(versions = ["1.75.0"])

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
    "//:Cargo.toml",
    "//hello-world:Cargo.toml"
    ],
)
use_repo(crate, "crates")

